--- a/Web/Marketplace/src/index.css
+++ b/Web/Marketplace/src/index.css
@@ -4,4 +4,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0 auto;
+}
+body{
+  margin: 0 auto;
 }
