-Added additional UI elements, including a new button, and implemented React Routing to enhance website navigation. -Implemented basic server API functionality.

--- a/Web/Marketplace/src/index.css
+++ b/Web/Marketplace/src/index.css
@@ -5,6 +5,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0 auto;
+
+  --Main: #FFC8DD;
+  --Sec: #FFAFCC;
+  --Blue: #A2D2FF;
+  --LightBlue: #BDE0FE;
+  --BackGround: #CDB4DB;
 }
 body{
   margin: 0 auto;
