--- a/Web/Marketplace/src/components/mainPage/MainPage.css
+++ b/Web/Marketplace/src/components/mainPage/MainPage.css
@@ -5,8 +5,8 @@
     height: 50px;
     width: 50px;
     position: absolute;
-    right: 3%;
-    bottom: 8%;
+    right: 3.5%;
+    bottom: 9%;
 }
 .addButton:active .addButtonImage{
     color: #b3a0c0;
@@ -15,5 +15,14 @@
     width: 100%;
     height: 100%;
     scale: 1.8;
-    color: #81738a;
+    color: var(--Border1);
+}
+.offersBox{
+    width: 80%;
+    height: 84vh;
+    margin: 20px auto 0 auto;
+    padding: 10px;
+    border: 4px var(--Border1) dashed;
+    border-radius: 20px;
+    background-color: var(--LightBlue);
 }
